fix(menu-bar): make menu button bigger on mobile

--- a/components/menu-bar/menu-bar.less
+++ b/components/menu-bar/menu-bar.less
@@ -110,10 +110,6 @@
 	}
 
 	@media @screen-medium {
-		padding: 0;
-		top: 45px;
-	}
-	@media @screen-large {
 		top: 55px;
 		right: 49px;
 
